fix: RangePicker align active-bar with small size

--- a/components/date-picker/style/index.less
+++ b/components/date-picker/style/index.less
@@ -209,6 +209,10 @@
       .@{picker-prefix-cls}-clear {
         right: @input-padding-horizontal-sm;
       }
+      
+      .@{picker-prefix-cls}-active-bar {
+        margin-left: @input-padding-horizontal-sm;
+      }
     }
   }
 
